--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   },
   "require": {
     "php": "^8.1",
-    "laravel/framework": "^9",
+    "laravel/framework": "^8|^9",
     "nesbot/carbon": "^2",
     "spatie/laravel-data": "^1.4"
   },
